stylesheets/index-stylesheet.css
* {
  text-align: center;
  /*border: 1px solid black;*/
}

#body {
  font-size: 0;
  width: 100%;
}

#indexContent {
  font-size: 0;
}

#header {
  height: 30%;
  width: 100%;
}

.navbar {
  background-color: #0099CC;
  width:  100%;
  height: 60px;
  padding-top: 1%;
  font-size: 30px;
}

#content {
  font-size: 0;
}

#projects {
  background-color: #2D4B6F;
  width: 96%;
  height: 300px;
}

#aboutme {
  background-color: #FA565F;
  width: 46%;
  height: 400px;
}

#skills {
  background-color: #6699FF;
  width: 46%;
  height: 400px;
}

#resume {
  background-color: #9BB697;
  width: 46%;
  height: 280px;
}

#blog {
  background-color: #247B8C;
  width: 46%;
  height: 280px;
}

#funstuff {
  background-color: #FF9966;
  width: 38%;
}

.box {
  font-size: 25px;
  color: white;
  padding: 2%;
  font-family: sans-serif;
  display: inline-block;
  vertical-align: top;

}

#footer {
    width: 100%;
    height: 70px;
    background-color: #CC00CC;
    padding: 5%
    font-size: 25px;
    font-family: sans-serif;
}

#stalk1 {
  float: left;
  font-size: 25px;
  color: white;
  margin-left: 25%;
}

#stalk2 {
  float: right;
  font-size: 25px;
  color: white;
  margin-right: 25%;
}

a.button {
    /*float: center;*/
    margin-top: 2%;
    display: inline-block;
}

a:link {
  text-decoration: none;
  font-family: sans-serif;
  color: white;
}

a:hover {
  text-decoration: underline;
}

a:visited {
  text-decoration: none;
  color: #00FF99;
}

